# video-generation-book

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  RELEASE.md  SIMPLE_EXAMPLE.md  TROUBLESHOOTING.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test_simple.py
.github/workflows/: release.yml  test.yml
bak/: hunyuan_colab_a100.ipynb  hunyuan_colab_a100_fixed.ipynb  opensora_v2_colab_a100.ipynb
bak/videogenbook/: __init__.py  cli.py  generation.py  models.py  utils.py
notebooks/: README_COLAB.md  hunyuan_colab_a100 (1).ipynb  hunyuan_colab_a100.ipynb  hunyuan_colab_a100_clean copy.ipynb  hunyuan_colab_a100_clean.ipynb  hunyuan_colab_a100_fixed.ipynb  hunyuan_colab_a100_validated.ipynb  opensora_v2_colab_a100.ipynb  opensora_v2_colab_a100_fixed.ipynb  wan21_colab_notebook.ipynb
notebooks/01_foundations/: README.md  hunyuan_colab_a100_.ipynb
scripts/: build_package.py
src/: __init__.py
src/videogenbook/: __init__.py  _version.py  cli.py  evaluation.py  generation.py  models.py  workflows.py
